[package]
name = "addin-postgres"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.

[dependencies]
addin1c = "0.2"
postgres = { version = "0.19", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
] }
rust_decimal = { version = "1.33", features = ["db-postgres"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
utf16_lit = "2.0"
smallvec = "1.11"
